<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <group android:checkableBehavior="single">
       <item android:id="@+id/nav_call"
           android:icon="@drawable/ic_phone_black_24dp"
           android:title="@string/call"/>
       <item android:id="@+id/nav_friends"
           android:icon="@drawable/ic_group_black_24dp"
           android:title="@string/friends"/>
       <item android:id="@+id/nav_location"
           android:icon="@drawable/ic_location_on_black_24dp"
           android:title="@string/location"/>
       <item android:id="@+id/nav_mail"
           android:icon="@drawable/ic_mail_black_24dp"
           android:title="@string/mail"/>
       <item android:id="@+id/nav_tasks"
           android:icon="@drawable/ic_assignment_black_24dp"
           android:title="@string/tasks"/>

   </group>
</menu>